fix alignment, other updates

--- a/sass/_band.scss
+++ b/sass/_band.scss
@@ -1,6 +1,3 @@
-$section-padding: 5rem;
-$inner-padding: 1.4rem;
-
 .band {
   @include bleed-x(10%);
   @include susy-media(40rem) {
@@ -12,12 +9,7 @@ $inner-padding: 1.4rem;
   padding-bottom: $section-padding / 2;
   padding-top: $section-padding / 2;
 
-  &--head {
-    @extend %grid-nest;
-  }
-
   &--header {
-    @extend %grid-full;
     @include header(3rem);
 
     text-align: center;
@@ -26,6 +18,7 @@ $inner-padding: 1.4rem;
   &--sub-header {
     @include header(1.5rem);
     color: $text-color-blue;
+    text-align: center;
   }
 
   &--summary {
@@ -35,16 +28,24 @@ $inner-padding: 1.4rem;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: $inner-padding * 2;
-
-    text-align: center;
   }
 
   &--body {
-    @extend %grid-half;
+    @extend %grid-half-padded;
 
     p {
       &:not(:last-child) {
         margin-bottom: $inner-padding;
+      }
+    }
+
+    &:not(:last-child) {
+      margin-bottom: $inner-padding;
+    }
+
+    @include breakpoint ($break-sm) {
+      &:not(:last-child) {
+        margin-bottom: 0;
       }
     }
   }
@@ -56,4 +57,8 @@ $inner-padding: 1.4rem;
 
 .band-split {
   @extend %grid-half-padded;
+}
+
+.centered {
+  text-align: center;
 }
